--- a/buildspec.yml
+++ b/buildspec.yml
@@ -14,6 +14,8 @@ phases:
             - echo "Print Environment Variables"
             - echo "Start the installation process"
             - echo "Installation Process Completed"
+            - echo "Author $Name , Project $Project"
+            - printenv 
     pre_build:
         commands: 
             - echo "This is the start of Pre-Build phase"
