--- a/buildspec.yml
+++ b/buildspec.yml
@@ -16,7 +16,8 @@ phases:
             - echo "Installation Process Completed"
             - echo "Author $Name , Project $Project"
             - printenv 
-            - echo "$CODEBUILD_BUILD_ID"
+            - echo "$CODEBUILD_BUILD_ID , $Client"
+
     pre_build:
         commands: 
             - echo "This is the start of Pre-Build phase"
